// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template bindings reducer adds new template bindings without deleting old ones 1`] = `
Immutable.Map {
  "byStaticId": Immutable.Map {
    "1cf0b888-e5ff-47ca-bcf2-b2dc9478b81c": Immutable.Map {
      "permissions": Immutable.Map {},
      "dataSchemaId": "http://komgo.io/schema/data-letter-of-credit/1/base",
      "staticId": "1cf0b888-e5ff-47ca-bcf2-b2dc9478b81c",
      "subProductId": "LETTER_OF_CREDIT",
      "example": Immutable.Map {
        "beneficiaryBank": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Beneficiary Name",
            "O": "Beneficiary Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": true,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "expiryDate": "2019-11-29",
        "applicant": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Applicant Name",
            "O": "Applicant Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "cf63c1f8-1165-4c94-a8f8-9252eb4f0016",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": false,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "trade": Immutable.Map {
          "paymentTerms": Immutable.Map {
            "eventBase": "BL",
            "when": "AFTER",
            "time": 30,
            "timeUnit": "DAYS",
            "dayType": "CALENDAR",
          },
          "sellerEtrmId": undefined,
          "price": 70.02,
          "maxTolerance": 1.25,
          "deliveryLocation": "Weymouth",
          "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
          "quantity": 600000,
          "priceUnit": "BBL",
          "commodity": "CRUDE_OIL",
          "updatedAt": "2019-01-01T00:00:00.000Z",
          "currency": "EUR",
          "status": "TO_BE_FINANCED",
          "buyer": "node.123",
          "deliveryTerms": "FOB",
          "deliveryPeriod": Immutable.Map {
            "startDate": "2019-04-03",
            "endDate": "2019-04-10",
          },
          "sourceId": "E2389423",
          "paymentTermsOption": "DEFERRED",
          "version": 2,
          "buyerEtrmId": "buyerEtrmId",
          "invoiceQuantity": "LOAD",
          "_id": "123",
          "dealDate": "2017-12-31",
          "source": "KOMGO",
          "createdAt": "2019-01-01T00:00:00.000Z",
          "minTolerance": 1.25,
          "seller": "node.321",
        },
        "beneficiary": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Beneficiary Name",
            "O": "Beneficiary Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "ecc3b179-00bc-499c-a2f9-f8d1cc58e9db",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": false,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "currency": "USD",
        "issuingBank": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Issuing Name",
            "O": "Issuing Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": true,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "amount": 10000,
        "version": 1,
        "issuingBankReference": "REF-0001",
        "cargo": Immutable.Map {
          "parcels": Immutable.List [
            Immutable.Map {
              "deemedBLDate": undefined,
              "quantity": 600000,
              "loadingPlace": "Porto",
              "laycanPeriod": Immutable.Map {
                "startDate": "2017-12-31",
                "endDate": "2017-12-31",
              },
              "modeOfTransport": "VESSEL",
              "version": 2,
              "destinationPlace": "Weymouth",
              "_id": undefined,
              "id": "123",
            },
          ],
          "updatedAt": "2019-01-01T00:00:00.000Z",
          "status": "TO_BE_FINANCED",
          "sourceId": "E2389423",
          "cargoId": "F0401",
          "grade": "BRENT",
          "version": 2,
          "originOfGoods": "China",
          "_id": "123",
          "source": "KOMGO",
          "createdAt": "2019-01-01T00:00:00.000Z",
          "quality": "top",
        },
      },
      "productId": "TRADE_FINANCE",
      "updatedAt": "2019-01-02T00:00:00.000Z",
      "bindings": Immutable.Map {
        "trade": "http://komgo.io/schema/trade/2",
        "cargo": "http://komgo.io/schema/cargo/2",
        "beneficiary": "http://komgo.io/schema/company/1/base",
        "applicant": "http://komgo.io/schema/company/1/base",
        "issuingBank": "http://komgo.io/schema/company/1/base",
        "beneficiaryBank": "http://komgo.io/schema/company/1/base",
      },
      "templateSchemaId": "http://komgo.io/schema/sblc/template-bindings/1",
      "version": 1,
      "createdAt": "2019-01-01T00:00:00.000Z",
    },
    "other": Immutable.Map {
      "permissions": Immutable.Map {},
      "dataSchemaId": "http://komgo.io/schema/data-letter-of-credit/1/base",
      "staticId": "other",
      "subProductId": "LETTER_OF_CREDIT",
      "example": Immutable.Map {
        "beneficiaryBank": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Beneficiary Name",
            "O": "Beneficiary Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": true,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "expiryDate": "2019-11-29",
        "applicant": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Applicant Name",
            "O": "Applicant Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "cf63c1f8-1165-4c94-a8f8-9252eb4f0016",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": false,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "trade": Immutable.Map {
          "paymentTerms": Immutable.Map {
            "eventBase": "BL",
            "when": "AFTER",
            "time": 30,
            "timeUnit": "DAYS",
            "dayType": "CALENDAR",
          },
          "sellerEtrmId": undefined,
          "price": 70.02,
          "maxTolerance": 1.25,
          "deliveryLocation": "Weymouth",
          "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
          "quantity": 600000,
          "priceUnit": "BBL",
          "commodity": "CRUDE_OIL",
          "updatedAt": "2019-01-01T00:00:00.000Z",
          "currency": "EUR",
          "status": "TO_BE_FINANCED",
          "buyer": "node.123",
          "deliveryTerms": "FOB",
          "deliveryPeriod": Immutable.Map {
            "startDate": "2019-04-03",
            "endDate": "2019-04-10",
          },
          "sourceId": "E2389423",
          "paymentTermsOption": "DEFERRED",
          "version": 2,
          "buyerEtrmId": "buyerEtrmId",
          "invoiceQuantity": "LOAD",
          "_id": "123",
          "dealDate": "2017-12-31",
          "source": "KOMGO",
          "createdAt": "2019-01-01T00:00:00.000Z",
          "minTolerance": 1.25,
          "seller": "node.321",
        },
        "beneficiary": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Beneficiary Name",
            "O": "Beneficiary Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "ecc3b179-00bc-499c-a2f9-f8d1cc58e9db",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": false,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "currency": "USD",
        "issuingBank": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Issuing Name",
            "O": "Issuing Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": true,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "amount": 10000,
        "version": 1,
        "issuingBankReference": "REF-0001",
        "cargo": Immutable.Map {
          "parcels": Immutable.List [
            Immutable.Map {
              "deemedBLDate": undefined,
              "quantity": 600000,
              "loadingPlace": "Porto",
              "laycanPeriod": Immutable.Map {
                "startDate": "2017-12-31",
                "endDate": "2017-12-31",
              },
              "modeOfTransport": "VESSEL",
              "version": 2,
              "destinationPlace": "Weymouth",
              "_id": undefined,
              "id": "123",
            },
          ],
          "updatedAt": "2019-01-01T00:00:00.000Z",
          "status": "TO_BE_FINANCED",
          "sourceId": "E2389423",
          "cargoId": "F0401",
          "grade": "BRENT",
          "version": 2,
          "originOfGoods": "China",
          "_id": "123",
          "source": "KOMGO",
          "createdAt": "2019-01-01T00:00:00.000Z",
          "quality": "top",
        },
      },
      "productId": "OTHER",
      "updatedAt": "2019-01-02T00:00:00.000Z",
      "bindings": Immutable.Map {
        "trade": "http://komgo.io/schema/trade/2",
        "cargo": "http://komgo.io/schema/cargo/2",
        "beneficiary": "http://komgo.io/schema/company/1/base",
        "applicant": "http://komgo.io/schema/company/1/base",
        "issuingBank": "http://komgo.io/schema/company/1/base",
        "beneficiaryBank": "http://komgo.io/schema/company/1/base",
      },
      "templateSchemaId": "http://komgo.io/schema/sblc/template-bindings/1",
      "version": 1,
      "createdAt": "2019-01-01T00:00:00.000Z",
    },
  },
  "staticIds": Immutable.List [],
  "total": 2,
}
`;

exports[`template bindings reducer can add multiple templates in one call 1`] = `
Immutable.Map {
  "byStaticId": Immutable.Map {
    "1cf0b888-e5ff-47ca-bcf2-b2dc9478b81c": Immutable.Map {
      "permissions": Immutable.Map {},
      "dataSchemaId": "http://komgo.io/schema/data-letter-of-credit/1/base",
      "staticId": "1cf0b888-e5ff-47ca-bcf2-b2dc9478b81c",
      "subProductId": "LETTER_OF_CREDIT",
      "example": Immutable.Map {
        "beneficiaryBank": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Beneficiary Name",
            "O": "Beneficiary Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": true,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "expiryDate": "2019-11-29",
        "applicant": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Applicant Name",
            "O": "Applicant Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "cf63c1f8-1165-4c94-a8f8-9252eb4f0016",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": false,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "trade": Immutable.Map {
          "paymentTerms": Immutable.Map {
            "eventBase": "BL",
            "when": "AFTER",
            "time": 30,
            "timeUnit": "DAYS",
            "dayType": "CALENDAR",
          },
          "sellerEtrmId": undefined,
          "price": 70.02,
          "maxTolerance": 1.25,
          "deliveryLocation": "Weymouth",
          "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
          "quantity": 600000,
          "priceUnit": "BBL",
          "commodity": "CRUDE_OIL",
          "updatedAt": "2019-01-01T00:00:00.000Z",
          "currency": "EUR",
          "status": "TO_BE_FINANCED",
          "buyer": "node.123",
          "deliveryTerms": "FOB",
          "deliveryPeriod": Immutable.Map {
            "startDate": "2019-04-03",
            "endDate": "2019-04-10",
          },
          "sourceId": "E2389423",
          "paymentTermsOption": "DEFERRED",
          "version": 2,
          "buyerEtrmId": "buyerEtrmId",
          "invoiceQuantity": "LOAD",
          "_id": "123",
          "dealDate": "2017-12-31",
          "source": "KOMGO",
          "createdAt": "2019-01-01T00:00:00.000Z",
          "minTolerance": 1.25,
          "seller": "node.321",
        },
        "beneficiary": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Beneficiary Name",
            "O": "Beneficiary Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "ecc3b179-00bc-499c-a2f9-f8d1cc58e9db",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": false,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "currency": "USD",
        "issuingBank": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Issuing Name",
            "O": "Issuing Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": true,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "amount": 10000,
        "version": 1,
        "issuingBankReference": "REF-0001",
        "cargo": Immutable.Map {
          "parcels": Immutable.List [
            Immutable.Map {
              "deemedBLDate": undefined,
              "quantity": 600000,
              "loadingPlace": "Porto",
              "laycanPeriod": Immutable.Map {
                "startDate": "2017-12-31",
                "endDate": "2017-12-31",
              },
              "modeOfTransport": "VESSEL",
              "version": 2,
              "destinationPlace": "Weymouth",
              "_id": undefined,
              "id": "123",
            },
          ],
          "updatedAt": "2019-01-01T00:00:00.000Z",
          "status": "TO_BE_FINANCED",
          "sourceId": "E2389423",
          "cargoId": "F0401",
          "grade": "BRENT",
          "version": 2,
          "originOfGoods": "China",
          "_id": "123",
          "source": "KOMGO",
          "createdAt": "2019-01-01T00:00:00.000Z",
          "quality": "top",
        },
      },
      "productId": "TRADE_FINANCE",
      "updatedAt": "2019-01-02T00:00:00.000Z",
      "bindings": Immutable.Map {
        "trade": "http://komgo.io/schema/trade/2",
        "cargo": "http://komgo.io/schema/cargo/2",
        "beneficiary": "http://komgo.io/schema/company/1/base",
        "applicant": "http://komgo.io/schema/company/1/base",
        "issuingBank": "http://komgo.io/schema/company/1/base",
        "beneficiaryBank": "http://komgo.io/schema/company/1/base",
      },
      "templateSchemaId": "http://komgo.io/schema/sblc/template-bindings/1",
      "version": 1,
      "createdAt": "2019-01-01T00:00:00.000Z",
    },
    "other": Immutable.Map {
      "permissions": Immutable.Map {},
      "dataSchemaId": "http://komgo.io/schema/data-letter-of-credit/1/base",
      "staticId": "other",
      "subProductId": "LETTER_OF_CREDIT",
      "example": Immutable.Map {
        "beneficiaryBank": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Beneficiary Name",
            "O": "Beneficiary Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": true,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "expiryDate": "2019-11-29",
        "applicant": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Applicant Name",
            "O": "Applicant Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "cf63c1f8-1165-4c94-a8f8-9252eb4f0016",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": false,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "trade": Immutable.Map {
          "paymentTerms": Immutable.Map {
            "eventBase": "BL",
            "when": "AFTER",
            "time": 30,
            "timeUnit": "DAYS",
            "dayType": "CALENDAR",
          },
          "sellerEtrmId": undefined,
          "price": 70.02,
          "maxTolerance": 1.25,
          "deliveryLocation": "Weymouth",
          "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
          "quantity": 600000,
          "priceUnit": "BBL",
          "commodity": "CRUDE_OIL",
          "updatedAt": "2019-01-01T00:00:00.000Z",
          "currency": "EUR",
          "status": "TO_BE_FINANCED",
          "buyer": "node.123",
          "deliveryTerms": "FOB",
          "deliveryPeriod": Immutable.Map {
            "startDate": "2019-04-03",
            "endDate": "2019-04-10",
          },
          "sourceId": "E2389423",
          "paymentTermsOption": "DEFERRED",
          "version": 2,
          "buyerEtrmId": "buyerEtrmId",
          "invoiceQuantity": "LOAD",
          "_id": "123",
          "dealDate": "2017-12-31",
          "source": "KOMGO",
          "createdAt": "2019-01-01T00:00:00.000Z",
          "minTolerance": 1.25,
          "seller": "node.321",
        },
        "beneficiary": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Beneficiary Name",
            "O": "Beneficiary Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "ecc3b179-00bc-499c-a2f9-f8d1cc58e9db",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": false,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "currency": "USD",
        "issuingBank": Immutable.Map {
          "node": "0xa12b7e68c7bbc4e1f6080c96a7461d449d27e98c31020e4229d8cd8b4942009a",
          "isMember": true,
          "x500Name": Immutable.Map {
            "CN": "Issuing Name",
            "O": "Issuing Name ltd",
            "C": "country",
            "L": "city",
            "STREET": "street",
            "PC": "postal code",
          },
          "staticId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
          "parentNode": "0x9c19ca3566862e19c7779f1af09f5b2883d8880917cedcbf4ae505a775fa518a",
          "updatedAt": "2019-07-09T00:00:00.000Z",
          "owner": "0x734617Fc250f867C7E3EBa9E736fB8C9eD680cbf",
          "label": "0x4b8031c0bf1350534d733f16ff67080b5f208aa22e89b291e396b8176fb03436",
          "isFinancialInstitution": true,
          "_id": "5d257a68e6280a7f7e2bfb68",
          "createdAt": "2019-07-09T00:00:00.000Z",
        },
        "amount": 10000,
        "version": 1,
        "issuingBankReference": "REF-0001",
        "cargo": Immutable.Map {
          "parcels": Immutable.List [
            Immutable.Map {
              "deemedBLDate": undefined,
              "quantity": 600000,
              "loadingPlace": "Porto",
              "laycanPeriod": Immutable.Map {
                "startDate": "2017-12-31",
                "endDate": "2017-12-31",
              },
              "modeOfTransport": "VESSEL",
              "version": 2,
              "destinationPlace": "Weymouth",
              "_id": undefined,
              "id": "123",
            },
          ],
          "updatedAt": "2019-01-01T00:00:00.000Z",
          "status": "TO_BE_FINANCED",
          "sourceId": "E2389423",
          "cargoId": "F0401",
          "grade": "BRENT",
          "version": 2,
          "originOfGoods": "China",
          "_id": "123",
          "source": "KOMGO",
          "createdAt": "2019-01-01T00:00:00.000Z",
          "quality": "top",
        },
      },
      "productId": "KYC",
      "updatedAt": "2019-01-02T00:00:00.000Z",
      "bindings": Immutable.Map {
        "trade": "http://komgo.io/schema/trade/2",
        "cargo": "http://komgo.io/schema/cargo/2",
        "beneficiary": "http://komgo.io/schema/company/1/base",
        "applicant": "http://komgo.io/schema/company/1/base",
        "issuingBank": "http://komgo.io/schema/company/1/base",
        "beneficiaryBank": "http://komgo.io/schema/company/1/base",
      },
      "templateSchemaId": "http://komgo.io/schema/sblc/template-bindings/1",
      "version": 1,
      "createdAt": "2019-01-01T00:00:00.000Z",
    },
  },
  "staticIds": Immutable.List [],
  "total": 2,
}
`;

exports[`template bindings reducer has an empty initial state 1`] = `
Immutable.Map {
  "byStaticId": Immutable.Map {},
  "staticIds": Immutable.List [],
  "total": 0,
}
`;
